--- a/main.html
+++ b/main.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Age Validation Form</title>
+</head>
+<body>
+    <form id="ageForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name" required>
+        
+        <label for="age">Age:</label>
+        <input type="number" id="age" required>
+        
+        <button type="submit" id="btn">Submit</button>
+    </form>
 
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-
-  <body>
-    <!-- write the body here -->
-
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+    <script src="script.js"></script>
+</body>
 </html>
